added loading screen
added a simple loading screen. also fixed carousel indicators

--- a/css/main.css
+++ b/css/main.css
@@ -347,3 +347,31 @@ textarea {
 #nominateBtn:hover {
   background-color: #65922F;
 }
+
+#loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ffffff;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#loading-screen:before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #333;
+  border-top-color: #fff;
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to {transform: rotate(360deg);}
+}
