--- a/css/main.css
+++ b/css/main.css
@@ -296,15 +296,14 @@ textarea {
   position: fixed;
   display:flex;
   flex-direction: column;
-  top: 0%;
-  left: 0%;
+  top: 0;
+  left: 0;
   width: 50%;
   max-width: 500px;
   height: 100%;
   background-color: #fff;
   border-radius: 5px;
-  padding: 0px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  padding: 0;
   font-size: 1em;
 }
 
@@ -374,4 +373,22 @@ textarea {
 
 @keyframes spin {
   to {transform: rotate(360deg);}
+}
+
+/* Styles for mobile devices */
+@media (max-width: 767px) {
+  #map {
+    position: absolute;
+    bottom: 30%;
+  }
+  #infoPanel {
+    position: absolute;
+    top: 70%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    height: auto;
+    width: 100vw;
+  }
 }
