--- a/css/main.css
+++ b/css/main.css
@@ -262,11 +262,25 @@ textarea {
 }
 
  #map {
+   position: absolute;
+   left: 25%;
    height: 100vh;
    width: 100vw;
    margin:0;
    padding:0;
  }
+
+#infoPanel {
+
+
+  top: 80%;
+  bottom: 0;
+  left: 0;
+  right: 25%;
+  display: block;
+  height: auto;
+  width: 100vw;
+}
 
 .ol-popup-content {
   background-color: white;
@@ -293,13 +307,10 @@ textarea {
 }
 
 #infoPanel {
-  position: fixed;
-  display:flex;
-  flex-direction: column;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
-  max-width: 500px;
+  width: 25%;
   height: 100%;
   background-color: #fff;
   border-radius: 5px;
@@ -308,8 +319,7 @@ textarea {
 }
 
 #infoPanel-header {
-  display: flex;
-  max-width: fit-content;
+  margin-left: initial;
   background-color: white;
   z-index: 9990;
   justify-content: center;
@@ -371,6 +381,7 @@ textarea {
   #map {
     position: absolute;
     bottom: 20%;
+    left: 0;
   }
   #infoPanel {
     position: absolute;
