--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,11 @@ textarea {
   top: 0;
 }
 
+#credits {
+  position: absolute;
+  bottom: 0;
+}
+
 #infoPanel-content {
   flex: 1;
   padding: 20px;
