--- a/css/main.css
+++ b/css/main.css
@@ -264,8 +264,8 @@ textarea {
  #map {
    position: absolute;
    left: 30%;
-   height: 100vh;
-   width: 100vw;
+   height: 100%;
+   width: 100%;
    margin:0;
    padding:0;
  }
@@ -278,7 +278,7 @@ textarea {
   position: absolute;
   top: 0;
   width: 30%;
-  height: 100vh;
+  height: 100%;
   background-color: #fff;
   border-radius: 5px;
   padding: 0;
@@ -308,7 +308,6 @@ textarea {
   padding: 5px;
   min-width: 150px;
   max-width: 600px;
-  /*max-height: 600px;*/
   overflow-y: auto;
   overflow-x: hidden;
   font-size: 1.2em;
@@ -328,11 +327,6 @@ textarea {
 .treeName {
   font-size: 1.2em;
   text-align: center;
-}
-
-.ol-zoom {
-  right: 8px;
-  left:auto;
 }
 
 #loading-screen {
@@ -400,5 +394,3 @@ body {
 .dropdown-item {
   cursor: pointer;
 }
-
-
