--- a/css/main.css
+++ b/css/main.css
@@ -261,14 +261,19 @@ textarea {
   }
 }
 
- #map {
+#map-container {
+  height: 100%;
+  width: 100%;
+}
+
+#map {
    position: absolute;
-   left: 30%;
+   right: 0;
    height: 100%;
-   width: 100%;
+   width: 70%;
    margin:0;
    padding:0;
- }
+}
 
 #infoPanel {
   bottom: 0;
@@ -370,8 +375,9 @@ body {
 
   #map {
     position: absolute;
-    bottom: 20%;
     left: 0;
+    width: 100%;
+    height: 80%;
   }
   #infoPanel {
     position: absolute;
@@ -392,5 +398,9 @@ body {
 }
 
 .dropdown-item {
+  cursor: pointer;
+}
+
+tr {
   cursor: pointer;
 }
