refactor and variable name changes for better readability

--- a/css/main.css
+++ b/css/main.css
@@ -267,12 +267,12 @@ textarea {
 }
 
 #map {
-   position: absolute;
-   right: 0;
-   height: 100%;
-   width: 70%;
-   margin:0;
-   padding:0;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 70%;
+  margin: 0;
+  padding: 0;
 }
 
 #infoPanel {
@@ -359,7 +359,9 @@ textarea {
 }
 
 @keyframes spin {
-  to {transform: rotate(360deg);}
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 body {
@@ -440,7 +442,7 @@ tr {
   align-items: center;
   flex-wrap: wrap;
   margin: 0 auto;
-  max-width: 400px; /* Adjust this value to control the container's width */
+  max-width: 400px;
 }
 
 #searchInput {
@@ -448,9 +450,9 @@ tr {
   margin-right: 10px;
   border-radius: 5px;
   border: 1px solid #ced4da;
-  padding: 6px 12px; /* Increase padding to match button's padding */
+  padding: 6px 12px;
   font-size: 16px;
-  height: 38px; /* Adjust height to match the button's height */
+  height: 38px;
 }
 
 #searchButton:hover {
